--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@uniswap/router-sdk",
-  "version": "1.3.0",
-  "description": "An sdk for routing swaps using Uniswap v2 and Uniswap v3.",
+  "name": "hydra-router-sdk",
+  "version": "1.0.0",
+  "description": "An sdk for routing swaps using Hydraswap v2 and Hydraswap v3.",
   "publishConfig": {
     "access": "public"
   },
@@ -18,19 +18,19 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Uniswap/router-sdk.git"
+    "url": "https://github.com/ipetrov22/hydra-router-sdk.git"
   },
   "keywords": [
-    "uniswap",
-    "ethereum"
+    "hydraswap",
+    "hydra"
   ],
   "license": "MIT",
   "dependencies": {
     "@ethersproject/abi": "^5.5.0",
     "@uniswap/sdk-core": "^3.0.1",
     "@uniswap/swap-router-contracts": "1.1.0",
-    "@uniswap/v2-sdk": "^3.0.1",
-    "@uniswap/v3-sdk": "^3.8.3"
+    "@uniswap/v3-sdk": "^3.8.3",
+    "hydra-v2-sdk": "^1.0.0"
   },
   "devDependencies": {
     "@types/jest": "^24.0.25",
